# api/http/server.go
@@ -6,6 +6,8 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/elkoshar/reconciliation-app/api"
+	"github.com/elkoshar/reconciliation-app/api/http/reconciliation"
 	config "github.com/elkoshar/reconciliation-app/configs"
 )
 
@@ -13,6 +15,7 @@ import (
 type Server struct {
 	server *http.Server
 	Cfg    *config.Config
+	Recon  api.ReconciliationService
 }
 
 var ()
@@ -20,6 +23,7 @@ var ()
 // Serve will run an HTTP server
 func (s *Server) Serve(port string) error {
 
+	reconciliation.Init(s.Recon)
 	s.server = &http.Server{
 		ReadTimeout:  s.Cfg.HttpReadTimeout * time.Second,
 		WriteTimeout: s.Cfg.HttpWriteTimeout * time.Second,
